@@ -65,7 +65,6 @@
     , "RLGL_H" : null
     , "RLGL_VERSION" : "\"5.0\""
     , "TRACELOG" : null
-    , "TRACELOGD" : null
     , "GRAPHICS_API_OPENGL_33" : null
     , "RLGL_RENDER_TEXTURES_HINT" : null
     , "RL_DEFAULT_BATCH_BUFFER_ELEMENTS" : "8192"
@@ -158,6 +157,8 @@
     , "SUPPORT_MODULE_RTEXT" : "1"
     , "SUPPORT_MODULE_RMODELS" : "1"
     , "SUPPORT_MODULE_RAUDIO" : "1"
+    , "SUPPORT_STANDARD_FILEIO" : "1"
+    , "SUPPORT_TRACELOG" : "1"
     , "SUPPORT_CAMERA_SYSTEM" : "1"
     , "SUPPORT_GESTURES_SYSTEM" : "1"
     , "SUPPORT_RPRAND_GENERATOR" : "1"
@@ -173,6 +174,7 @@
     , "SUPPORT_FILEFORMAT_BMP" : "1"
     , "SUPPORT_FILEFORMAT_PNG" : "1"
     , "SUPPORT_FILEFORMAT_JPG" : "1"
+    , "MAX_TRACELOG_MSG_LENGTH" : "256"
     , "MAX_FILEPATH_CAPACITY" : "8192"
     , "MAX_FILEPATH_LENGTH" : "4096"
     , "MAX_KEYBOARD_KEYS" : "512"
@@ -181,7 +183,7 @@
     , "MAX_GAMEPAD_AXES" : "8"
     , "MAX_GAMEPAD_BUTTONS" : "32"
     , "MAX_GAMEPAD_VIBRATION_TIME" : "2.0"
-    , "MAX_TOUCH_POINTS" : "8"
+    , "MAX_TOUCH_POINTS" : "10"
     , "MAX_KEY_PRESSED_QUEUE" : "16"
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
     , "MAX_DECOMPRESSION_SIZE" : "64"
@@ -238,9 +240,6 @@
     , "AUDIO_DEVICE_CHANNELS" : "2"
     , "AUDIO_DEVICE_SAMPLE_RATE" : "0"
     , "MAX_AUDIO_BUFFER_POOL_CHANNELS" : "16"
-    , "SUPPORT_STANDARD_FILEIO" : "1"
-    , "SUPPORT_TRACELOG" : "1"
-    , "MAX_TRACELOG_MSG_LENGTH" : "256"
     , "RAYGUI_H" : null
     , "RAYGUI_VERSION_MAJOR" : "4"
     , "RAYGUI_VERSION_MINOR" : "5"
