@@ -1,3 +1,7 @@
+2026-01-10  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f2c8a9c085c26c0a7a0b5bf7d6e69a56618bd964 ) and raygui ( https://github.com/raysan5/raygui/commit/51e6bcb39346b3e363643f95c3532119af41f6fd )
+
 2025-12-28  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/05f5143603ba4db9b3157e981926a42c55c4c766 ) and raygui ( https://github.com/raysan5/raygui/commit/0b94b80c92c34c79f8d902f51f68dfc1edacf51b )
